fixing cvs by uuid
